--- a/views/admin/edit_mentor.mustache
+++ b/views/admin/edit_mentor.mustache
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        
+
         .sidebar-link:hover {
             background-color: #eff6ff;
             padding-left: 1rem;
-            border-radius: 0.375rem; 
+            border-radius: 0.375rem;
         }
-       
+
         .sticky-footer-container {
             display: flex;
             flex-direction: column;
@@ -23,7 +23,7 @@
         .content-grow {
             flex-grow: 1;
         }
-       
+
         #menu-toggle:checked + #menu {
             display: block;
         }
@@ -34,9 +34,12 @@
 <div class="sticky-footer-container p-3 md:pl-6">
 
 
-    
+
     <header class="bg-white shadow-md p-4 flex justify-between items-center md:hidden">
-        <div class="text-2xl font-semibold text-blue-700">MentorMeU</div>
+       <a href="dashboard" class="text-2xl font-semibold text-blue-700 cursor-pointer">
+    MentorMeU
+</a>
+
         <label for="menu-toggle" class="cursor-pointer">
             <i class="fas fa-bars"></i>
         </label>
@@ -45,10 +48,13 @@
 
     <div class="flex flex-1 overflow-hidden">
 
-       
+
         <div class="bg-white rounded-lg shadow-md p-4 w-64 md:w-1/6 mb-5 md:mb-0 mr-4 hidden md:block">
-          
-        <div class="text-2xl font-semibold text-blue-700 mb-6">MentorMeU</div>
+
+       <a href="dashboard" class="text-2xl font-semibold text-blue-700 mb-6 cursor-pointer">
+    MentorMeU
+</a>
+
         <ul class="fa-ul">
             <li class="mb-2">
                 <a href="/admin/dashboard" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
@@ -110,13 +116,15 @@
         </div>
 
 
-    
+
     <div class="content-grow overflow-auto">
 
 
+
 <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-    <h2 class="text-xl font-semibold">Welcome Roselyne Abdalla Osundwa</h2>
+    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
 </div>
+
 
 
 <div class="container mx-auto px-4 sm:px-0 max-w-3xl mt-10">
@@ -127,7 +135,7 @@
     <form action="/admin/mentor/{{_id}}/update?_method=PUT" method="post" class="space-y-4">
       <input type="hidden" name="_method" value="put">
 
-      
+
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="sm:col-span-1">
           <label for="firstName" class="block text-gray-700">First Name:</label>
@@ -169,14 +177,16 @@
         </div>
       </div>
 
-<div class="flex justify-between items-center">
-  <button type="submit" class="px-4 sm:px-6 py-2 sm:py-3 border border-transparent text-base sm:text-lg leading-6 font-medium rounded-md text-white bg-blue-600 hover:bg-blue-500 focus:outline-none focus:border-blue-700 focus:shadow-outline-blue active:bg-blue-700 transition duration-150 ease-in-out">
-    Update Mentor
-  </button>
-  <a href="/admin/mentors" class="text-blue-600 hover:text-blue-800 transition duration-150 ease-in-out text-sm sm:text-base">
-    Cancel
-  </a>
+<div class="flex flex-col sm:flex-row justify-end space-y-2 sm:space-y-0 sm:space-x-3 w-full">
+    <button type="submit" class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white font-bold py-2 px-3 text-xs sm:px-4 sm:text-sm rounded w-full sm:w-auto text-center">
+        Update Mentor
+    </button>
+    <a href="/admin/mentors" class="border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white font-bold py-2 px-3 text-xs sm:px-4 sm:text-sm rounded w-full sm:w-auto text-center">
+        Cancel
+    </a>
 </div>
+
+
 
     </form>
     {{/mentor}}
@@ -194,5 +204,16 @@
 
 </div>
 
+ <script>
+
+        document.getElementById('menu-toggle').addEventListener('change', function() {
+            var menu = document.getElementById('menu');
+            if (this.checked) {
+                menu.style.display = 'block';
+            } else {
+                menu.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
