--- a/views/admin/student.mustache
+++ b/views/admin/student.mustache
@@ -37,6 +37,8 @@
 
     <div class="sticky-footer-container p-3 md:pl-6">
 
+
+
         <header class="bg-white shadow-md p-4 flex justify-between items-center md:hidden">
             <a href="dashboard" class="text-2xl font-semibold text-blue-700 cursor-pointer">
                 MentorMeU
@@ -49,6 +51,8 @@
         </header>
 
         <div class="flex flex-1 overflow-hidden">
+
+
             <div class="bg-white rounded-lg shadow-md p-4 w-64 md:w-1/6 mb-5 md:mb-0 mr-4 hidden md:block">
 
                 <a href="dashboard" class="text-2xl font-semibold text-blue-700 mb-6 cursor-pointer">
@@ -123,78 +127,63 @@
                 </ul>
             </div>
 
+
+
             <div class="flex-1 overflow-auto">
+
 
 
                 <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
                     <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
                 </div>
 
-
-                <div class="bg-white rounded-lg shadow-md p-6 mb-6">
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                        <!-- students -->
-                        <div
-                            class="p-4 border-2 border-dashed border-green-200 rounded-lg text-center hover:shadow-lg transition-shadow duration-300 ease-in-out">
-                            <div class="mb-4">
-                                <i
-                                    class="fas fa-user-graduate text-green-600 bg-green-100 rounded-full text-4xl p-4"></i>
-                            </div>
-                            <h3 class="text-lg font-semibold">Students</h3>
-                            <a href="/admin/students"
-                                class="mt-4 bg-green-600 bg-opacity-20 hover:bg-opacity-30 text-green-600 hover:text-green-700 font-bold py-2 px-4 rounded inline-block text-center">
-                                View
-                            </a>
+                <div class="container mx-auto my-6 p-4 sm:my-10 sm:p-6 max-w-2xl">
+                    <div class="bg-white rounded-lg shadow-md p-4 sm:p-6 border border-gray-300">
+                        <h2 class="text-xl sm:text-2xl font-semibold text-gray-800 mb-4 sm:mb-6">Student Details</h2>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-xs sm:text-sm font-bold mb-1">Name:</label>
+                            <p class="text-gray-600 text-xs sm:text-sm">{{student.firstName}} {{student.lastName}}</p>
                         </div>
-                        <!-- Mentors -->
-                        <div
-                            class="p-4 border-2 border-dashed border-blue-200 rounded-lg text-center hover:shadow-lg transition-shadow duration-300 ease-in-out">
-                            <div class="mb-4">
-                                <i
-                                    class="fas fa-chalkboard-teacher text-blue-600 bg-blue-100 rounded-full text-4xl p-4"></i>
-                            </div>
-                            <h3 class="text-lg font-semibold">Mentors</h3>
-                            <a href="/admin/mentors"
-                                class="mt-4 bg-blue-600 bg-opacity-20 hover:bg-opacity-30 text-blue-600 hover:text-blue-700 font-bold py-2 px-4 rounded inline-block text-center">
-                                View
-                            </a>
-
-
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-xs sm:text-sm font-bold mb-1">Email:</label>
+                            <p class="text-gray-600 text-xs sm:text-sm">{{student.email}}</p>
                         </div>
-                        <!-- Opportunities -->
-                        <div
-                            class="p-4 border-2 border-dashed border-red-200 rounded-lg text-center hover:shadow-lg transition-shadow duration-300 ease-in-out">
-                            <div class="mb-4">
-                                <i class="fas fa-handshake text-red-600 bg-red-100 rounded-full text-4xl p-4"></i>
-                            </div>
-                            <h3 class="text-lg font-semibold">Opportunities</h3>
-                            <a href="/admin/opportunities"
-                                class="mt-4 bg-red-600 bg-opacity-20 hover:bg-opacity-30 text-red-600 hover:text-red-700 font-bold py-2 px-4 rounded inline-block text-center">
-                                View
-                            </a>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-xs sm:text-sm font-bold mb-1">Phone Number:</label>
+                            <p class="text-gray-600 text-xs sm:text-sm">{{student.phoneNumber}}</p>
+                        </div>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-xs sm:text-sm font-bold mb-1">Role:</label>
+                            <p class="text-gray-600 text-xs sm:text-sm">{{student.role}}</p>
+                        </div>
 
-
+                        <div class="flex flex-col sm:flex-row justify-end space-y-2 sm:space-y-0 sm:space-x-3 w-full">
+                            <a href="/admin/student/{{student._id}}/edit"
+                                class="border border-yellow-500 text-yellow-500 hover:bg-yellow-500 hover:text-white font-bold py-2 px-3 text-xs sm:px-4 sm:text-sm rounded w-full sm:w-auto text-center">Edit</a>
+                            <form action="/admin/students/{{student._id}}/delete?_method=DELETE" method="post"
+                                onsubmit="return confirm('Are you sure you want to delete this student?');"
+                                class="w-full sm:w-auto">
+                                <button type="submit"
+                                    class="border border-red-500 text-red-500 hover:bg-red-500 hover:text-white font-bold py-2 px-3 text-xs sm:px-4 sm:text-sm rounded w-full text-center">Delete</button>
+                            </form>
                         </div>
                     </div>
-
                 </div>
 
-
             </div>
-
         </div>
+    </div>
+    <script>
 
-        <script>
-
-            document.getElementById('menu-toggle').addEventListener('change', function () {
-                var menu = document.getElementById('menu');
-                if (this.checked) {
-                    menu.style.display = 'block';
-                } else {
-                    menu.style.display = 'none';
-                }
-            });
-        </script>
+        document.getElementById('menu-toggle').addEventListener('change', function () {
+            var menu = document.getElementById('menu');
+            if (this.checked) {
+                menu.style.display = 'block';
+            } else {
+                menu.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 
 </html>
