--- a/views/students/mentors.mustache
+++ b/views/students/mentors.mustache
@@ -1,163 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Mentors</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        
         .sidebar-link:hover {
             background-color: #eff6ff;
             padding-left: 1rem;
-            border-radius: 0.375rem; 
+            border-radius: 0.375rem;
         }
-       
+
         .sticky-footer-container {
             display: flex;
             flex-direction: column;
             height: 100vh;
         }
+
         .content-grow {
             flex-grow: 1;
         }
-       
-        #menu-toggle:checked + #menu {
+
+        #menu-toggle:checked+#menu {
             display: block;
         }
     </style>
 </head>
+
 <body class="bg-gray-100">
 
-<div class="sticky-footer-container p-3 md:pl-6">
+    <div class="sticky-footer-container p-3 md:pl-6">
 
 
-    
-    <header class="bg-white shadow-md p-4 flex justify-between items-center md:hidden">
-        <div class="text-2xl font-semibold text-blue-700">MentorMeU</div>
-        <label for="menu-toggle" class="cursor-pointer">
-            <i class="fas fa-bars"></i>
-        </label>
-        <input class="hidden" type="checkbox" id="menu-toggle">
-    </header>
 
-    <div class="flex flex-1 overflow-hidden">
+        <header class="bg-white shadow-md p-4 flex justify-between items-center md:hidden">
+            <a href="dashboard" class="text-2xl font-semibold text-blue-700 cursor-pointer">
+                MentorMeU
+            </a>
 
-       
-        <div class="bg-white rounded-lg shadow-md p-4 w-64 md:w-1/6 mb-5 md:mb-0 mr-4 hidden md:block">
-          
-        <div class="text-2xl font-semibold text-blue-700 mb-6">MentorMeU</div>
-        <ul class="fa-ul">
-            <li class="mb-2">
-                <a href="/student/dashboard" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-tachometer-alt mr-2"></i> Dashboard
+            <label for="menu-toggle" class="cursor-pointer">
+                <i class="fas fa-bars"></i>
+            </label>
+            <input class="hidden" type="checkbox" id="menu-toggle">
+        </header>
+
+        <div class="flex flex-1 overflow-hidden">
+
+
+            <div class="bg-white rounded-lg shadow-md p-4 w-64 md:w-1/6 mb-5 md:mb-0 mr-4 hidden md:block">
+
+                <a href="dashboard" class="text-2xl font-semibold text-blue-700 mb-6 cursor-pointer">
+                    MentorMeU
                 </a>
-            </li>
-            <li class="mb-2">
-                <a href="/student/my-opportunities" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-briefcase mr-2"></i> Opportunities
-                </a>
-            </li>
- 
-  <li class="mb-2">
-    <a href="/student/mentors" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-        <i class="fa-li fas fa-user-friends mr-2"></i> Mentors
-    </a>
-</li>
-<li>
-    <a href="/auth/logout" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-        <i class="fa-li fas fa-sign-out-alt mr-2"></i> Logout
-    </a>
-</li>
 
-        </ul>
-    </div>
+                <ul class="fa-ul">
+                    <li class="mb-2">
+                        <a href="/student/dashboard"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-tachometer-alt mr-2"></i> Dashboard
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="/student/my-opportunities"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-briefcase mr-2"></i> Opportunities
+                        </a>
+                    </li>
 
-        <div id="menu" class="bg-white rounded-lg shadow-md p-4 absolute w-full md:hidden hidden">
-        <ul class="fa-ul">
-            <li class="mb-2">
-                <a href="/student/dashboard" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-tachometer-alt mr-2"></i> Dashboard
-                </a>
-            </li>
-            <li class="mb-2">
-                <a href="/student/my-opportunities" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-briefcase mr-2"></i> Opportunities
-                </a>
-            </li>
-     
-            <li class="mb-2">
-                <a href="/student/mentors" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-inbox mr-2"></i> Mentors
-                </a>
-            </li>
-            <li>
-                <a href="/auth/logout" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
-                    <i class="fa-li fas fa-cog mr-2"></i> Logout
-                </a>
-            </li>
-        </ul>
-        </div>
+                    <li class="mb-2">
+                        <a href="/student/mentors"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-user-friends mr-2"></i> Mentors
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/auth/logout" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-sign-out-alt mr-2"></i> Logout
+                        </a>
+                    </li>
 
-
-        
-        <div class="flex-1 overflow-auto">
-
-            
-            <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
-                <h2 class="text-xl font-semibold">Welcome Roselyne Abdalla Osundwa</h2>
+                </ul>
             </div>
 
-         <!-- Main content area -->
-<div class="container mx-auto px-4">
-    <!-- Section Heading -->
-    <h1 class="text-2xl font-semibold my-4">Mentors</h1>
+            <div id="menu" class="bg-white rounded-lg shadow-md p-4 absolute w-full md:hidden hidden">
+                <ul class="fa-ul">
+                    <li class="mb-2">
+                        <a href="/student/dashboard"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-tachometer-alt mr-2"></i> Dashboard
+                        </a>
+                    </li>
+                    <li class="mb-2">
+                        <a href="/student/my-opportunities"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-briefcase mr-2"></i> Opportunities
+                        </a>
+                    </li>
 
-    <!-- Mentor List -->
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-        {{#mentors}}
-            <!-- Mentor Card -->
-            <div class="bg-white rounded-lg shadow-md p-6 mb-6 transition ease-in-out duration-300 transform hover:shadow-lg">
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <!-- Mentor Avatar -->
-                    <div class="col-span-1 md:col-span-3 p-4 border-2 border-dashed border-blue-200 rounded-lg text-center">
-                        <div class="mb-4">
-                            <!-- Use a conditional to check if imageUrl exists -->
-                            {{#imageUrl}}
-                                <!-- If imageUrl exists, use it -->
-                                <img src="{{ imageUrl }}" alt="{{ firstName }} {{ lastName }}" class="rounded-full h-16 w-16 mx-auto">
-                            {{/imageUrl}}
-                            {{^imageUrl}}
-                                <!-- If imageUrl does not exist, use the default image -->
-                                <img src="https://cdn5.vectorstock.com/i/1000x1000/72/59/female-avatar-profile-icon-round-african-american-vector-18307259.jpg" alt="{{ firstName }} {{ lastName }}" class="rounded-full h-16 w-16 mx-auto">
-                            {{/imageUrl}}
-                        </div>
-                        <h2 class="text-lg font-semibold">{{ firstName }} {{ lastName }}</h2>
-                        <p>Email: {{ email }}</p>
-                        <p>Phone Number: {{ phoneNumber }}</p>
-                        <p>Expertise: {{ expertise }}</p>
-                        <!-- Use CSS to truncate the bio text with ellipsis -->
-                        <p class="bio-text">{{ bio }}</p>
-                    </div>
+                    <li class="mb-2">
+                        <a href="/student/mentors"
+                            class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-inbox mr-2"></i> Mentors
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/auth/logout" class="text-blue-600 hover:text-blue-800 sidebar-link flex items-center">
+                            <i class="fa-li fas fa-cog mr-2"></i> Logout
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+
+            <div class="flex-1 overflow-auto">
+
+
+                <div class="bg-blue-100 p-4 mb-4 rounded-lg shadow-md mt-4 sm:mt-8">
+                    <h2 class="text-xl font-semibold">Welcome {{userFirstName}}</h2>
                 </div>
-            </div>
-        {{/mentors}}
+
+
+                <div class="container mx-auto px-4">
+                    <h1 class="text-2xl font-semibold my-4">Mentors</h1>
+
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                        {{#mentors}}
+                        <div
+                            class="bg-white rounded-lg shadow-md p-6 mb-6 transition ease-in-out duration-300 transform hover:shadow-lg">
+                            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                                <div
+                                    class="col-span-1 md:col-span-3 p-4 border-2 border-dashed border-blue-200 rounded-lg text-center">
+                                    <div class="mb-4">
+                                        {{#imageUrl}}
+                                        <img src="{{ imageUrl }}" alt="{{ firstName }} {{ lastName }}"
+                                            class="rounded-full h-16 w-16 mx-auto">
+                                        {{/imageUrl}}
+                                        {{^imageUrl}}
+                                        <img src="https://cdn5.vectorstock.com/i/1000x1000/72/59/female-avatar-profile-icon-round-african-american-vector-18307259.jpg"
+                                            alt="{{ firstName }} {{ lastName }}" class="rounded-full h-16 w-16 mx-auto">
+                                        {{/imageUrl}}
+                                    </div>
+                                    <h2 class="text-lg font-semibold">{{ firstName }} {{ lastName }}</h2>
+                                    <p>Email: {{ email }}</p>
+                                    <p>Phone Number: {{ phoneNumber }}</p>
+                                    <p>Expertise: {{ expertise }}</p>
+                                    <p class="bio-text">{{ bio }}</p>
+                                </div>
+                            </div>
+                        </div>
+                        {{/mentors}}
+                    </div>
+                    {{^mentors}}
+                    <p class="text-center text-gray-600">No mentors available at the moment.</p>
+                    {{/mentors}}
+                </div>
+                 </div>
+                   </div>
+
     </div>
-    <!-- No Mentors Message -->
-    {{^mentors}}
-        <p class="text-center text-gray-600">No mentors available at the moment.</p>
-    {{/mentors}}
-</div>
 
- 
+    <script>
 
-        </div>
-
-    </div>
-
-</div>
-
+        document.getElementById('menu-toggle').addEventListener('change', function () {
+            var menu = document.getElementById('menu');
+            if (this.checked) {
+                menu.style.display = 'block';
+            } else {
+                menu.style.display = 'none';
+            }
+        });
+    </script>
 </body>
+
 </html>
